fixed alignment on contact form

--- a/style.css
+++ b/style.css
@@ -1568,6 +1568,15 @@ footer p {
         flex-direction: column;
     }
 
+    .radio-container { 
+        width: 300px;
+    }
+
+    .add-notes label {
+        width: 300px;
+    }
+
+
     textarea {
         width: 300px;
     }
